# cakeybar

./: Cargo.toml  LICENSE  README.md  l.txt  notes  todo
docs/ipc-test/src/: ipc.rs  main.rs
example/: config.toml  theme.css
examples/: workspace-icons.css
examples/darkblue/: config.toml  theme.css
examples/debug/: config.toml  theme.css
examples/radius/: config.toml  theme.css
examples/win95/: config.toml  theme.css
examples/workspace-icons/: config.toml  workspace-icons.css
misc/: build.sh  install.sh  notes  notes.txt  release.sh  xephyr.sh
misc/ipc-test/: Cargo.toml
misc/nom/: Cargo.toml
misc/nom/src/: main.rs
misc/omnomnom/: Cargo.toml
misc/omnomnom/src/: main.rs
src/: _bar.rs  bar.rs  config.rs  decorations.rs  float.rs  macros.rs  main.rs  util.rs
src/components/: _equalizer.rs  _menu.rs  backlight.rs  bandwidth.rs  battery.rs  clock.rs  completor.rs  container.rs  cpu.rs  disk.rs  dropdown.rs  equalizer.rs  i3_mode.rs  i3mode.rs  i3window.rs  i3workspace.rs  image.rs  ip.rs  memory.rs  menu.rs  mod.rs  mode.rs  network.rs  script.rs  tray.rs  void.rs  window.rs  window_title.rs  workspaces.rs
src/components/command_input/: autosuggest.rs  mod.rs
src/components/tray/: manager.rs  message.rs  mod.rs
src/config/: args.rs  env.rs  file.rs  mod.rs
src/ipc-test/: Cargo.toml
src/ipc-test/src/: main.rs  tcp.rs
src/system-tray/: Cargo.toml  README.md
src/system-tray/src/: atom.rs  main.rs  tray.rs
src/tray/: atom.rs  ipc.rs  manager.rs  mod.rs  tray.rs  util.rs
src/util/: file.rs  format_bytes.rs  label_group.rs  mod.rs  programs.rs  symbols.rs  timer.rs
src/wm/: atom.rs  bsp.rs  events.rs  gtk.rs  i3.rs  mod.rs  util.rs  watch.rs  window.rs  wm_util.rs  workspace.rs  xcb.rs  xcb_util.rs
src/wm/bsp/: listen.rs  mod.rs
src/wm/gtk/: mod.rs  reset.css  window.rs
src/wm/i3/: listen.rs  mod.rs
src/wm/ipc/: commands.rs  display.rs  exec.rs  help.rs  listen.rs  mod.rs  parser.rs
src/wm/xcb/: listen.rs  mod.rs  windows.rs  workspaces.rs  xwindows.rs
src/wm/xcb/xwindows/: mod.rs  xwindowlist.rs
