[package]
name = "cakeybar"
version = "0.3.0"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk.git"
features = ["v3_22"]

[dependencies.xcb]
version = "0.8.2"
features = [ "thread" ]

[dependencies]
glib = { git = "https://github.com/gtk-rs/glib.git" }
gio = { git = "https://github.com/gtk-rs/gio.git" }
gdk = { git = "https://github.com/gtk-rs/gdk.git" }
cairo-rs = { git = "https://github.com/gtk-rs/cairo.git" }
gdk-sys = { git = "https://github.com/gtk-rs/sys.git" }
glib-sys = { git = "https://github.com/gtk-rs/sys.git" }
libc = "0.2"
i3ipc = "0.8.2"
chrono = "0.4"
clap = "2.31.2"
toml = "0.4"
nom = "4"
pulse-simple = { git = "https://github.com/astro/rust-pulse-simple" }
ansi_term = "0.11"
dft = "0.5.5"
notify = "4.0.0"

# stats
systemstat = "0.1.3"
probes = "0.1.3"
sysinfo = "0.5.6"

# tray
crossbeam-channel = "0.2"

[profile.release]
lto = true
