[package]
name = "cakeybar"
version = "0.4.3"
edition = "2018"
license = "Unlicence OR MIT"

[profile.release]
lto = true
# opt-level = "z"
# panic = "abort"

[dependencies]
gtk = { git = "https://github.com/gtk-rs/gtk.git", features = ["v3_22"] }
glib = { git = "https://github.com/gtk-rs/glib.git" }
gio = { git = "https://github.com/gtk-rs/gio.git" }
gdk = { git = "https://github.com/gtk-rs/gdk.git" }
cairo-rs = { git = "https://github.com/gtk-rs/cairo.git" }
gdk-sys = { git = "https://github.com/gtk-rs/sys.git" }
glib-sys = { git = "https://github.com/gtk-rs/sys.git" }
gtk-sys = { git = "https://github.com/gtk-rs/sys.git" }
gobject-sys = { git = "https://github.com/gtk-rs/sys.git" }
xcb = { version = "0.8.2", features = ["thread"] }
xcb-util = { version = "0.2.1", features = ["icccm", "ewmh"] }
serde = { version = "1.0.89", features = ["derive"] }
libc = "0.2"
chrono = "0.4"
gumdrop = "0.6"
toml = "0.4"
i3ipc = "0.8.2"
lazy_static = "1.0.0"
nom = "4.2"
ansi_term = "0.11"
inotify = "0.6.1"
crossbeam-channel = "0.3"
bincode = "1.1.2"

# stats
systemstat = "0.1.3"
probes = "0.1.3"
sysinfo = "0.5.6"
